--- a/HandmadeOS/MerihariOS/Makefile
+++ b/HandmadeOS/MerihariOS/Makefile
@@ -1,34 +1,59 @@
 TOOLPATH = ../z_tools/
+INCPATH	 = ../z_tools/haribote/
+
 MAKE     = $(TOOLPATH)make.exe -r
 NASK     = $(TOOLPATH)nask.exe
+CC1		 = $(TOOLPATH)cc1.exe -I$(INCPATH) -Os -Wall -quiet
+GAS2NASK = $(TOOLPATH)gas2nask.exe -a
+OBJ2BIM	 = $(TOOLPATH)obj2bim.exe
+BIM2HRB	 = $(TOOLPATH)bim2hrb.exe
+RULEFILE = $(TOOLPATH)haribote/haribote.rul
 EDIMG    = $(TOOLPATH)edimg.exe
 IMGTOL   = $(TOOLPATH)imgtol.com
 COPY     = copy
 DEL      = del
 
-# ÉfÉtÉHÉãÉgìÆçÏ
+# „Éá„Éï„Ç©„É´„ÉàÂãï‰Ωú
 
 default :
 	$(MAKE) img
 
-# ÉtÉ@ÉCÉãê∂ê¨ãKë•
+# „Éï„Ç°„Ç§„É´ÁîüÊàêË¶èÂâá
 
-ipl.bin : ipl.nas Makefile
-	$(NASK) ipl.nas ipl.bin ipl.lst
+ipl10.bin : ipl10.nas Makefile
+	$(NASK) ipl10.nas ipl10.bin ipl10.lst
 
-merihari.sys : merihari.nas Makefile
-	$(NASK) merihari.nas merihari.sys merihari.lst
+asmhead.bin : asmhead.nas Makefile
+	$(NASK) asmhead.nas asmhead.bin asmhead.lst
 
-merihari.img : ipl.bin merihari.sys Makefile
+bootpack.gas : bootpack.c Makefile
+	$(CC1) -o bootpack.gas bootpack.c
+
+bootpack.nas : bootpack.gas Makefile
+	$(GAS2NASK) bootpack.gas bootpack.nas
+
+bootpack.obj : bootpack.nas Makefile
+	$(NASK) bootpack.nas bootpack.obj bootpack.lst
+
+bootpack.bim : bootpack.obj Makefile
+	$(OBJ2BIM) @$(RULEFILE) out:bootpack.bim stack:3136k map:bootpack.map \
+		bootpack.obj
+# 3MB+64KB=3136KB
+
+bootpack.hrb : bootpack.bim Makefile
+	$(BIM2HRB) bootpack.bim bootpack.hrb 0
+
+merihari.sys : asmhead.bin bootpack.hrb Makefile
+	copy /B asmhead.bin+bootpack.hrb merihari.sys
+
+merihari.img : ipl10.bin merihari.sys Makefile
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
-		wbinimg src:ipl.bin len:512 from:0 to:0 \
+		wbinimg src:ipl10.bin len:512 from:0 to:0 \
 		copy from:merihari.sys to:@: \
 		imgout:merihari.img
 
-# ÉRÉ}ÉìÉh
+# „Ç≥„Éû„É≥„Éâ
 
-asm :
-	$(MAKE) ipl.bin
 
 img :
 	$(MAKE) merihari.img
@@ -43,10 +68,15 @@ install :
 	$(IMGTOL) w a: merihari.img
 
 clean :
-	-$(DEL) ipl.bin
-	-$(DEL) ipl.lst
+	-$(DEL) *.bin
+	-$(DEL) *.lst
+	-$(DEL) *.gas
+	-$(DEL) *.obj
+	-$(DEL) bootpack.nas
+	-$(DEL) bootpack.map
+	-$(DEL) bootpack.bim
+	-$(DEL) bootpack.hrb
 	-$(DEL) merihari.sys
-	-$(DEL) merihari.lst
 
 src_only :
 	$(MAKE) clean
